Adding updates in composer file

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "project",
   "require": {
     "php": ">=7.4",
-    "johnpbloch/wordpress": "^6.0"
+    "johnpbloch/wordpress": "^6.0",
+    "johnpbloch/wordpress-core-installer": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
@@ -13,12 +14,18 @@
   },
   "scripts": {
     "test": "phpunit",
-    "lint": "phpcs --standard=WordPress"
+    "lint": "phpcs --standard=WordPress",
+    "post-install-cmd": [
+      "cp wp-config-sample.php wp-config.php || true"
+    ]
   },
   "config": {
     "allow-plugins": {
       "johnpbloch/wordpress-core-installer": true,
       "johnpbloch/wordpress-core": true
     }
+  },
+  "extra": {
+    "wordpress-install-dir": "wp"
   }
 }
