--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: WordPress Hello CI
 
 on:
   push:
-    branches: [ main ]   # Trigger on push to main branch
+    branches: [ main ]   # #Trigger on push to main branch
   pull_request:
     branches: [ main ]
 
