--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,8 +1,4 @@
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.6/phpunit.xsd"
-         bootstrap="tests/bootstrap.php"
-         colors="true"
->
+<phpunit bootstrap="tests/bootstrap.php">
     <testsuites>
         <testsuite name="Unit Tests">
             <directory>tests</directory>
