Adding secrets in the build.yml file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     uses: nirajan-devops/ci-workflows/.github/workflows/wordpress.yml@main
+    secrets: 
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
     with:
       php-version: '8.2'
       wordpress-version: 'latest'
